# scribus-plugin-apply-style

./: README.md
src/: CMakeLists.txt  applystyle.cpp  applystyle.h  applystyleplugin.cpp  applystyleplugin.h  plugin.cpp  plugin.h
src/module/: applystyleselection.h
src/ui/: applystyledialog.cpp  applystyledialog.h  applystyledialog.ui  dialog.cpp  dialog.h
