INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}
${CMAKE_SOURCE_DIR}/scribus
)

SET(SCRIBUS_APPLYSTYLE_PLUGIN_UI_SRC
  ui/applystyledialog.ui
)

SET(SCRIBUS_APPLYSTYLE_PLUGIN_MOC_CLASSES
  applystyleplugin.h
  applystyle.h
  ui/applystyledialog.h
)

SET(SCRIBUS_APPLYSTYLE_PLUGIN_SOURCES
  applystyleplugin.cpp
  ui/applystyledialog.cpp
  applystyle.cpp
)

SET(SCRIBUS_APPLYSTYLE_PLUGIN "applystyleplugin")

QT5_WRAP_UI(SCRIBUS_APPLYSTYLE_PLUGIN_UI_SOURCES ${SCRIBUS_APPLYSTYLE_PLUGIN_UI_SRC} )
QT5_WRAP_CPP(SCRIBUS_APPLYSTYLE_PLUGIN_MOC_SOURCES ${SCRIBUS_APPLYSTYLE_PLUGIN_MOC_CLASSES})

ADD_LIBRARY(${SCRIBUS_APPLYSTYLE_PLUGIN} MODULE ${SCRIBUS_APPLYSTYLE_PLUGIN_SOURCES} ${SCRIBUS_APPLYSTYLE_PLUGIN_MOC_SOURCES} ${SCRIBUS_APPLYSTYLE_PLUGIN_UI_SOURCES})

TARGET_LINK_LIBRARIES(${SCRIBUS_APPLYSTYLE_PLUGIN} ${PLUGIN_LIBRARIES})

INSTALL(TARGETS ${SCRIBUS_APPLYSTYLE_PLUGIN}
  LIBRARY
  DESTINATION ${PLUGINDIR}
  PERMISSIONS ${PLUGIN_PERMISSIONS}
)

ADD_DEPENDENCIES(${SCRIBUS_APPLYSTYLE_PLUGIN} ${SCRIBUS_SCRIBUSAPI_PLUGIN} ${EXE_NAME})
